--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,14 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="333"
-    android:viewportHeight="333">
+    android:viewportWidth="293"
+    android:viewportHeight="293">
   <group android:scaleX="0.4"
       android:scaleY="0.4"
-      android:translateX="99.9"
-      android:translateY="99.9">
+      android:translateX="87.9"
+      android:translateY="87.9">
     <path
-        android:pathData="M55.5,27.75H277.5V89.63L187.82,166.5L277.5,243.37V305.25H55.5V243.37L145.18,166.5L55.5,89.63V27.75ZM226.12,97.13L249.75,76.87V55.5H83.25V76.87L106.88,97.13H226.12ZM166.5,184.77L83.25,256.13V277.5H97.13L166.5,235.88L235.88,277.5H249.75V256.13L166.5,184.77Z"
-        android:fillColor="#ffffff"/>
+        android:pathData="M293,146.5C293,227.41 227.41,293 146.5,293C136.47,293 128.34,284.87 128.34,274.84C128.34,264.81 136.47,256.68 146.5,256.68C207.35,256.68 256.68,207.35 256.68,146.5C256.68,85.65 207.35,36.32 146.5,36.32C85.65,36.32 36.32,85.65 36.32,146.5C36.32,156.53 28.19,164.66 18.16,164.66C8.13,164.66 0,156.53 0,146.5C0,65.59 65.59,-0 146.5,-0C227.41,-0 293,65.59 293,146.5Z"
+        android:fillColor="#F4FBFF"
+        android:fillAlpha="0.2"/>
+    <path
+        android:pathData="M0,146.5C0,65.59 65.59,0 146.5,0C156.53,0 164.66,8.13 164.66,18.16C164.66,28.19 156.53,36.32 146.5,36.32C85.65,36.32 36.32,85.65 36.32,146.5C36.32,207.35 85.65,256.68 146.5,256.68C207.35,256.68 256.68,207.35 256.68,146.5C256.68,136.47 264.81,128.34 274.84,128.34C284.87,128.34 293,136.47 293,146.5C293,227.41 227.41,293 146.5,293C65.59,293 0,227.41 0,146.5Z"
+        android:fillColor="#F4FBFF"/>
   </group>
 </vector>
