--- a/app/src/main/res/drawable/splash_icon.xml
+++ b/app/src/main/res/drawable/splash_icon.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:width="48dp"
         android:height="48dp"
         android:gravity="center">
         <shape android:shape="oval">
-            <solid android:color="#FFFFFF" />
+            <solid android:color="#FF578CFF" />
         </shape>
     </item>
     <item
@@ -14,14 +13,22 @@
         android:height="40dp"
         android:gravity="center">
         <vector
-            android:width="24dp"
-            android:height="24dp"
-            android:tint="#000000"
-            android:viewportWidth="24"
-            android:viewportHeight="24">
-            <path
-                android:fillColor="#FF000000"
-                android:pathData="M17.6,11.48 L19.44,8.3a0.63,0.63 0,0 0,-1.09 -0.63l-1.88,3.24a11.43,11.43 0,0 0,-8.94 0L5.65,7.67a0.63,0.63 0,0 0,-1.09 0.63L6.4,11.48A10.81,10.81 0,0 0,1 20L23,20A10.81,10.81 0,0 0,17.6 11.48ZM7,17.25A1.25,1.25 0,1 1,8.25 16,1.25 1.25,0 0,1 7,17.25ZM17,17.25A1.25,1.25 0,1 1,18.25 16,1.25 1.25,0 0,1 17,17.25Z" />
+            android:width="108dp"
+            android:height="108dp"
+            android:viewportWidth="293"
+            android:viewportHeight="293">
+            <group android:scaleX="0.4"
+                android:scaleY="0.4"
+                android:translateX="87.9"
+                android:translateY="87.9">
+                <path
+                    android:pathData="M293,146.5C293,227.41 227.41,293 146.5,293C136.47,293 128.34,284.87 128.34,274.84C128.34,264.81 136.47,256.68 146.5,256.68C207.35,256.68 256.68,207.35 256.68,146.5C256.68,85.65 207.35,36.32 146.5,36.32C85.65,36.32 36.32,85.65 36.32,146.5C36.32,156.53 28.19,164.66 18.16,164.66C8.13,164.66 0,156.53 0,146.5C0,65.59 65.59,-0 146.5,-0C227.41,-0 293,65.59 293,146.5Z"
+                    android:fillColor="#F4FBFF"
+                    android:fillAlpha="0.2"/>
+                <path
+                    android:pathData="M0,146.5C0,65.59 65.59,0 146.5,0C156.53,0 164.66,8.13 164.66,18.16C164.66,28.19 156.53,36.32 146.5,36.32C85.65,36.32 36.32,85.65 36.32,146.5C36.32,207.35 85.65,256.68 146.5,256.68C207.35,256.68 256.68,207.35 256.68,146.5C256.68,136.47 264.81,128.34 274.84,128.34C284.87,128.34 293,136.47 293,146.5C293,227.41 227.41,293 146.5,293C65.59,293 0,227.41 0,146.5Z"
+                    android:fillColor="#F4FBFF"/>
+            </group>
         </vector>
     </item>
 </layer-list>
